# backend/src/platform/api-keys/dto/create-api-key.dto.ts
@@ -1,0 +1,4 @@
+import { createApiKeySchema } from '@tasker/config';
+import { createZodDto } from 'nestjs-zod';
+
+export class CreateApiKeyDto extends createZodDto(createApiKeySchema) {}
